# 2bib

./: .dockerignore  .env.example  .env.railway  .eslintrc.js  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.api.toml  railway.dashboard.toml  railway.pa-simulator.toml  railway.validator.toml  tsconfig.json  turbo.json
.github/workflows/: cd.yml  ci.yml
apps/api/: Dockerfile  jest.config.js  package.json
apps/api/src/: app.ts  index.ts
apps/dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/pa-agent/: jest.config.js  package.json
apps/pa-agent/src/: index.ts  orchestrator.ts
apps/pa-agent/tests/: orchestrator.test.ts
apps/pa-simulator/: Dockerfile  jest.config.js  package.json
apps/pa-simulator/src/: app.ts  index.ts
apps/proxy/: Dockerfile  jest.config.js  package.json
apps/validator/: Dockerfile  package.json
data/workflows/: fhir-validate-bundle.yaml  pa-denial-and-appeal.yaml  pa-happy-path.yaml
infra/k8s/: api.yaml  configmap.yaml  dashboard.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pa-simulator.yaml  proxy.yaml  secrets.yaml  validator.yaml
scripts/: generate-data.ts  load-data.ts  seed-fhir.ts
sdk/python/: pyproject.toml
sdk/python/pe/: __init__.py  client.py  exceptions.py  types.py
sdk/python/pe/resources/: fhir.py  pa.py  validate.py  workflows.py
sdk/python/tests/: conftest.py  test_client.py  test_fhir.py  test_pa.py  test_validate.py  test_workflows.py
tasks/: lessons.md  todo.md
(+102 files in other folders)
