[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pe-sdk"
version = "0.1.0"
description = "Official Python SDK for the Pe FHIR API Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["pe"]
